Bug 91882 - UI: Dialogue for Advanced filter is transparent.
Summary: UI: Dialogue for Advanced filter is transparent.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta2
Hardware: Other All
: highest normal
Assignee: Not Assigned
URL:
Whiteboard: bisected target:5.1.0 target:5.0.2
Keywords: regression
Depends on:
Blocks:
 
Reported: 2015-06-05 21:43 UTC by m_a_riosv
Modified: 2016-10-25 19:24 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing the issue (115.79 KB, image/png)
2015-06-05 21:43 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description m_a_riosv 2015-06-05 21:43:25 UTC
Created attachment 116318 [details]
Screenshot showing the issue

Menu/Data/Filter/Advanced filter.

Dialogue is transparent.

Attached screenshot.
Comment 1 Carlos Rodriguez 2015-06-09 12:28:37 UTC
I can confirm on:

Version: 5.0.0.0.beta2+
Build ID: 233a52af646f73a9ef0d53dd27f2823e8c362728
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:libreoffice-5-0, Time: 2015-06-09_08:19:23
Locale: es-ES (es_ES.UTF-8)
Comment 2 Buovjaga 2015-06-11 13:14:40 UTC
True.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 5fc0cbbc1254223fedf0f78c5e7539219b228697
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-11_04:30:51
Locale: fi-FI (fi_FI)
Comment 3 JPJ 2015-06-11 21:25:12 UTC
This is also true for the Format -> Paragraph, Format -> Page, and other dialogs.

Version: 5.0.0.0.beta3+
Build ID: d7163dfa5c207f973d226e494c1620651c2b2b75
TinderBox: Linux-rpm_deb-x86_64@46-TDF
Branch:libreoffice-5-0
Time: 2015-06-09_23:34:57
Locale: en-US (en_US.UTF-8)


OS: Kubuntu 14.04.2 x86-64
Comment 4 m_a_riosv 2015-06-11 21:42:07 UTC
For me the issue of Menu/Data/Filter/Advanced filter, remains with
Win7x64Ultimate
Version: 5.0.0.0.beta3 (x64)
Build ID: 96345c15d8ab19c49014f055fe41ba8e1f421e5c

But not for Format -> Paragraph, Format -> Page (I guess in Writer).
Comment 5 Eldar 2015-06-12 15:45:14 UTC
I have the same issue.

http://i.imgur.com/EEY9CRt.jpg
Comment 6 V Stuart Foote 2015-06-12 16:22:23 UTC
Seeing the issue on master with Windows 7 sp1, 64-bit en-US and current build
Version: 5.1.0.0.alpha1+
Build ID: bb9dad2ef23829b2500c9f99154bca6a8ba7d49a
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-06-12_00:27:07
Locale: en-US (en_US)

Not clear if Kendy's work on bug 91301 would also nipped this as well.
Comment 7 Michael Meeks 2015-06-13 17:16:14 UTC
Can anyone reproduce this on Windows / Mac ? Beluga you seem to suggest you can =) any chance you can re-try with a recent master ?
Comment 8 Buovjaga 2015-06-13 17:26:40 UTC
(In reply to Michael Meeks from comment #7)
> Can anyone reproduce this on Windows / Mac ? Beluga you seem to suggest you
> can =) any chance you can re-try with a recent master ?

It's not fixed for me, don't know, if build is recent enough:
Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: d56b125f6c6c18ac40712cefc3cec06530750e15
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-13_07:08:43
Locale: fi-FI (fi_FI)
Comment 9 m_a_riosv 2015-06-13 21:44:21 UTC
Reproducible for me. with the same version than @Beluga, too, in a parallel and clean installation.

I have found that it's no possible for me with 5.0 activate:

Menu/Tools/Options/LibreOffice/View - Graphics output - Use OpenGL for all rendering.
Menu/Tools/Options/LibreOffice/View - Graphics output - Force OpenGL even if blacklisted.

What I can do with:
Version: 4.4.5.0.0+ Build ID: 5f02e2eb1214efdb4a09f92458838528d07acc6c
TinderBox: Win-x86@51-TDF, Branch:libreoffice-4-4, Time: 2015-06-09_20:59:39

If can't have relation, I can open a new bug report.
Comment 10 Buovjaga 2015-06-14 09:23:03 UTC
Still repro, setting back to NEW.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 01a189abcd9a4ca472a74b3b2c000c9338fc2c91
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-14_07:46:28
Locale: fi-FI (fi_FI)
Comment 11 JPJ 2015-06-21 23:36:13 UTC
I just tried this out again with 5.0.0.1.  Initially in Writer, the problem via both Format -> Paragraph and Format -> Page was gone.

However, in Calc, Data -> Filter -> Advanced Filter would display a transparent box until I moved it around a bit, then the normal dialog would appear within the box.

After doing that in Calc, all menus in Writer became completely transparent.  That is File, Window, Help, all just show a completely transparent box with no text.

After playing with Writer, the Data -> Filer -> Advanced Filter dialog in Calc went back to being a transparent box.  The Calc dialog box still has a title bar that I can use to move the dialog box around, but it remains completely transparent with no text.

LibreOffice: from http://dev-builds.libreoffice.org/pre-releases/deb/x86_64/LibreOffice_5.0.0.1_Linux_x86-64_deb.tar.gz

OS: Kubuntu 14.04.2.
Comment 12 Pedro 2015-06-22 10:45:22 UTC
Bug is present in 5.0 RC1 under Windows x86 and x64

I believe this bug should have a higher priority. This is a Major usability regression.
Comment 13 Buovjaga 2015-06-22 10:55:30 UTC
You know that it would be untrue / You know that I would be a liar / If I was to say to you / Priority couldn't get much higher
Comment 14 Pedro 2015-06-22 11:05:51 UTC
(In reply to Beluga from comment #13)
> You know that it would be untrue / You know that I would be a liar / If I
> was to say to you / Priority couldn't get much higher

I apologize for the SPAM but I can't help it: Nicely done! (it also shows you are not a young lad ;) )
Comment 15 m_a_riosv 2015-07-11 11:52:44 UTC
Still with:
Win7x64
Versión: 5.0.0.3 (x64) Buid Id.: f79b5ba13f5e6cbad23f8038060e556217e66632
Comment 16 V Stuart Foote 2015-07-11 13:37:21 UTC
tdf#91882 bisect - Calc: Data -> Filter -> Advanced Filter (and later Data -> More Filters -> Advanced Filter) seems to have gone transparent in this range.

http://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=cda4c8edc21a92422e3479909d8082cddf16bcae..8ea45048b83e685090484c959f642118cfebef6c

So something other than the GTK tab cache Kendy addressed for bug 91301

=-=-=
Windows TB builds 797c48f0f74501def9f47444538c0e110fcfcca1  20150301 OK c6223049651d6607101ef04271773e478a429c8a  20150304 OK 78be86343bc6ee91fffe3b710f7db3a90f1b23ae  20150305 OK cda4c8edc21a92422e3479909d8082cddf16bcae  20150306 OK
 8ea45048b83e685090484c959f642118cfebef6c  20150306 Bad (64-bit) 8ea45048b83e685090484c959f642118cfebef6c  20150306 Bad 333f8a76341f5b4921e89012d133007503e49612  20150307 Bad
Comment 17 Jan Holesovsky 2015-07-20 09:04:23 UTC
OK, from the list of commits, apparently caused by the Idle rework...
Comment 18 m_a_riosv 2015-08-15 15:18:44 UTC
No issue with:
Win7x64
Version: 4.4.6.0.0+ Build ID: 57e6d5e978e0a70aa036f19bd3328a71dd3a587f
TinderBox: Win-x86@51-TDF, Branch:libreoffice-4-4, Time: 2015-07-31_00:32:33

updated the version.

but still with:
Version: 5.0.1.1 (x64) Build ID: 13f702ca819ea5b9f8605782c852d5bb513b3891
Version: 5.1.0.0.alpha1+ Build ID: 7d3fa6bae9f7a755eb2d0ca24bf1afd5f3646bb7
TinderBox: Win-x86@39, Branch:master, Time: 2015-08-09_08:38:08
Comment 19 Carlos Rodriguez 2015-08-18 18:24:24 UTC
Getting the issue on Debian 8 (jessie) with:

Version: 5.1.0.0.alpha1+
Build ID: 5d6ef74eea5d73b8cd17f313ad87138d56dc76ce
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-08-18_01:28:44
Locale: es-ES (es_ES.UTF-8)

Version: 5.0.2.0.0+
Build ID: b6bd0111073d0a94b40b20cce85e10cdcb791d3e
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:libreoffice-5-0, Time: 2015-08-18_09:17:32
Locale: es-ES (es_ES.UTF-8)

Versión: 5.0.0.5
Id. de compilación: 437e4abdf9e72fd0a6e6f8697a0e659bc77f9b10
Configuración regional: es-ES (es_ES.UTF-8)

The window renders fine when the mouse passes over "-undefined- list box". After that, clicking on any button does not show the button pressed but it goes to the action you click on. Going to Options again does not render fine but if you pass the mouse over "-undefined- list box" it renders fine.

Working fine on:
Version: 4.4.6.0.0+
Build ID: dfac25d2300b56ee4594346a4b5ce8b083a5c782
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:libreoffice-4-4, Time: 2015-08-18_09:56:35
Locale: es_ES.UTF-8

Versión: 4.4.5.2
Id. de compilación: a22f674fd25a3b6f45bdebf25400ed2adff0ff99
Configuración regional: es_ES.UTF-8
Comment 20 m_a_riosv 2015-08-23 20:57:04 UTC
Still with:
Win10x64
Version: 5.0.1.2 (x64) Build ID: 81898c9f5c0d43f3473ba111d7b351050be20261
Comment 21 Michael Meeks 2015-09-03 13:15:55 UTC
This was an idle re-work one; wow the code there is -hyper- lame; I'll open a new easy-hack to fix that up properly.
Fix on master, and gerrit awaiting 5.0.2: https://gerrit.libreoffice.org/18301
Comment 22 Commit Notification 2015-09-03 13:16:00 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0d349d96818e50f1175a5e576eb2d9d8060ab29e

tdf#91882 - make this hideous busy-loop lower priority and less busy.

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 23 Commit Notification 2015-09-03 14:05:33 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0cd13904fa2c4619d21343637020f857b6c0760a&h=libreoffice-5-0

tdf#91882 - make this hideous busy-loop lower priority and less busy.

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 24 Jean-Baptiste Faure 2015-09-03 18:27:50 UTC
Verified fixed in Version: 5.0.2.0.0+
Build ID: 65305ee03a64a90fa011b5b11b7076ddecf7728b
Ubuntu_15.04_x86-64
Locale : fr-FR (fr_FR.UTF-8)
built at home under Ubuntu 15.04 x86-64.

Best regards. JBF
Comment 25 m_a_riosv 2015-09-06 23:37:45 UTC
Thanks for solving the issue.

Verified.
Win10x64
Version: 5.0.2.1 (x64) Build ID: 9a18d52abbdfbdc2ac9acebec2b92e7859eb73b7