tdf#91882 - make this hideous busy-loop lower priority and less busy.

This way the rendering code can get a look in.

Change-Id: Id100031ffe1c4b415ed4ef1272a0772ec99ab4a9
Reviewed-on: https://gerrit.libreoffice.org/18301
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>